# wise-tui

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  index.html  mascot.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.omc/: project-memory.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_reset_default.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_mascot_prefs_toast.sql  003_projects_and_settings.sql  004_prd_task_split_results.sql  005_platform_split_prompt_seed.json  006_workflow_store.sql  007_employee_workflow.sql  008_employee_repository_mapping.sql  009_employee_display_order.sql  010_workflow_graph.sql  011_task_event_acceptance_idempotency.sql  012_prd_executable_tasks.sql  013_project_icon_badge.sql  014_project_repository_display_order.sql  015_project_prd_scope.sql  016_project_trellis_root.sql  016_seed_default_employees.sql  017_code_knowledge_graph.sql  018_code_knowledge_graph_relax_checks.sql  019_code_knowledge_graph_indexing_current_file.sql  020_mission_control.sql  021_mission_control_planning_evidence.sql  022_trellis_runtime.sql  023_agent_custom.sql  024_skills_external_path.sql  025_mcp_server.sql  026_assistant_custom.sql  027_assistant_id.sql  028_assistant_overrides.sql  029_migrate_prompt_layers_into_assistant_overrides.sql  030_employee_execution_engine.sql  031_workspace_inspector.sql  033_workspace_todos.sql  034_execution_environment_dispatch.sql  035_workspace_quick_actions_pinned.sql  036_project_open_app_id.sql  037_assistant_custom_entry.sql  038_assistant_hidden.sql  040_employee_default_instruction.sql  041_drop_code_knowledge_graph.sql  (+8 more)
src-tauri/src/: agent_registry.rs  ai_usage_multi_source.rs  app_state_commands.rs  at_mention_shortcuts.rs  cc_switch_import.rs  cc_wf_studio_mcp_bridge.rs  cc_workflow_studio.rs  child_slot_wait.rs  claude_code_line_edits.rs  claude_code_usage.rs  claude_commands.rs  claude_config_dir.rs  claude_external_ingest.rs  claude_llm_proxy.rs  claude_model_profiles.rs  code_knowledge_graph.rs  codex_binary.rs  codex_commands.rs  codex_config_dir.rs  codex_stream_adapter.rs  composer_image_gc.rs  composer_speech.rs  cua_driver.rs  cursor_agent.rs  cursor_binary.rs  (+55 more)
(+3230 files in other folders)
