[package]
name = "wise"
version = "0.1.0"
description = "Wise desktop orchestration client"
authors = ["Wise contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
# Keep local iterations responsive without relying on unstable codegen backends.
debug = 1
incremental = true

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "debuginfo"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api", "protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rayon = "1.10"
git2 = "0.20"
notify = "7.0"
semver = "1"
async-trait = "0.1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"
walkdir = "2"
base64 = "0.22"
keyboard-types = "0.7.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std", "async-await"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
urlencoding = "2.1"
sha2 = "0.10"
serde_yaml = "0.9"
regex = "1"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
streaming-iterator = "0.1"
tree-sitter-java = "0.23"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSOperation", "block2"] }

[dev-dependencies]
tempfile = "3"
